yamlProyecto1/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8demo-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8demo-backend
  template:
    metadata:
      labels:
        app: k8demo-backend
    spec:
      containers:
      - name: k8demo-backend
        image: juancorral/k8demo:backend1.3  # Your backend image
        ports:
        - containerPort: 8080
