yamlProyecto1/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: k8demo-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: k8demo-frontend
  template:
    metadata:
      labels:
        app: k8demo-frontend
    spec:
      containers:
      - name: k8demo-frontend
        image: juancorral/k8demo:frontend1.4  # Your frontend image
        ports:
        - containerPort: 80
