yamlProyecto1/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8demo-backend-service
spec:
  selector:
    app: k8demo-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
