yamlProyecto1/database-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8demo-db-service
spec:
  selector:
    app: k8demo-db
  ports:
  - protocol: TCP
    port: 3306
    targetPort: 3306
