yamlProyecto1/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8demo-frontend-service
spec:
  selector:
    app: k8demo-frontend
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
