yamlProyecto1/k8demo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: name-app-ingress
spec:
  ingressClassName: nginx
  rules:
  - host: roomscout.online
    http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: k8demo-backend-service
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8demo-frontend-service
            port:
              number: 80
